feat: moved logic from service to database query